localization code and file

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_es.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_es.json
@@ -8,6 +8,7 @@
 "menu_view": "Ver",
 "menu_search": "Buscar",
 "menu_filter": "Filtro",
+"menu_stack": "Apilar",
 "menu_options": "Opciones",
 "menu_sort_pane": "Ordenar Panel",
 "msg_elmo_title": "¿Dónde está Elmo?",
@@ -29,18 +30,18 @@
 "menu_help": "Ayuda",
 "menu_docs": "Docs",
 "menu_about": "Información",
-"menu_track": "Rastro",
-"menu_rez": "Rez",
+"menu_track": "Rastrear",
+"menu_rez": "Resonar",
 "menu_stack": "Apilar",
 "msg_file_audio": "Seleccionar archivo de audio (*.ogg)",
-"msg_warning_save-prompt": "¿Salvar antes de salir?",
+"msg_warning_save-prompt": "¿Guardar antes de salir?",
 "msg_warning_audio_loading": "Archivo de Audio cargando: por favor espere",
 "msg_warning_saving": "Guardando…",
 "msg_syncplay": "Sincronizar Juego",
 "menu_user": "Usuario",
-"menu_clique": "Clica",
-"menu_go-to-line": "ir a líneae",
-"menu_go-to-time": "ir a Tiempo",
+"menu_clique": "Clique",
+"menu_go-to-line": "Ir a líneae",
+"menu_go-to-time": "Ir a Tiempo",
 "menu_stacker": "Crear Pilas",
 "menu_stackShow": "Show de Apilar",
 "menu_pane": "Panel",
@@ -53,16 +54,16 @@
 "help_description_delete-link": "Remover palabra de cadenan",
 "help_description_track": "Crear cadena de rastreo",
 "help_description_stack": "Crear Pila",
-"help_description_clique-tab": "Seleccionar etiqueta de Clica",
-"help_description_quicklink": "Arrasta palabras para crear multiples enlaces Rez",
+"help_description_clique-tab": "Seleccionar etiqueta de Clique",
+"help_description_quicklink": "Arrastar palabras para crear multiples enlaces de Resonancia",
 "help_description_quickstack": "Arrastrar números de lineas para crear una Pila",
-"help_description_insert-word": "Inserta nueva palabra en el cursor",
+"help_description_insert-word": "Insertar nueva palabra en el cursor",
 "help_description_box": "Seleccionar palabras para encajonar las ",
 "help_description_delete-chain": "Eliminar cadena",
-"help_description_pick-chain": "Escoge cadena para filtrar",
+"help_description_pick-chain": "Escoger cadena para filtrar",
 "help_description_filter": "Solo mostrar selecciones actuales",
 "help_description_align": " Alinear Rastro actual",
-"help_description_search-word": "Busca una palabra",
+"help_description_search-word": "Buscar una palabra",
 "help_description_select-view": "Seleccionar panel de vista",
 "help_description_justify": "Seleccionar alineación ",
 "help_description_decrease": "Disminuir la anchura de la columna. ",
@@ -78,8 +79,8 @@
 "help_description_move-down": "Mover Abajo",
 "help_description_move-left": "Mover a la izquierda ",
 "help_description_move-right": "Mover a la derecha ",
-"help_description_pageup": "Desliza hacia arriba una pantalla ",
-"help_description_pagedown": "Desliza hacia abajo una pantalla",
+"help_description_pageup": "Deslizar hacia arriba una pantalla ",
+"help_description_pagedown": "Deslizar hacia abajo una pantalla",
 "help_description_next-pane": "Mover al siguiente panel de vista",
 "help_description_Next-link": "Saltar al siguiente enlace de la cadena actual",
 "help_description_playaudio": "Reproducir\/pausar audio",
@@ -89,15 +90,15 @@
 "help_description_restore-sequence": "Restaurar sequencia de línea original",
 "help_description_developer-view": "Activar vista de desarollador ",
 "help_description_download": "Descargar Rezonator",
-"help_description_rezonator-dot-com": "Vaya a Rezonator.com para Información",
+"help_description_rezonator-dot-com": "Ir a Rezonator.com para Información",
 "help_description_replace-word": "Reemplazar palabra",
 "help_description_restore-word": "Restaurar palabra original",
 "help_description_delete-new-word": "Eliminar palabra insertada",
 "help_description_delete-link-help": "Remover palabra de cadenan",
-"help_description_tag": "Marca palabra con etiqueta",
+"help_description_tag": "Marcar palabra con etiqueta",
 "help_description_caption": "Agregar subtítulo de Pila ",
 "help_description_focus": "Seleccionar palabra",
-"help_description_quit-chain": "\\Deja de agregar palabras a cadena",
+"help_description_quit-chain": "Dejar de agregar palabras a cadena",
 "help_description_zap": "Eliminar palabra de la cadena",
 "help_description_view-select": "Seleccionar vista",
 "help_description_word-format2": "Seleccionar formato de palabra ",
@@ -110,7 +111,7 @@
 "help_label_link": "Enlace",
 "help_label_quit-chain": "Dejar cadena",
 "help_label_delete-link": "Eliminar enlace",
-"help_label_track": "Rastro",
+"help_label_track": "Rastrear",
 "help_label_stack": "Apilar",
 "help_label_quicklink": "EnlaceRapido",
 "help_label_quickstack": "ApilarRápido",
@@ -162,7 +163,7 @@
 "help_label_focus": "Enfocar",
 "help_label_quit": "Dejar",
 "help_label_zap": "borrar",
-"help_label_rez": "Rez",
+"help_label_rez": "Resonar",
 "help_label_view-select": "Ver",
 "help_label_word-format2": "Palabra-formato",
 "help_label_zoom-out": "Reducir Zoom ",
@@ -216,17 +217,17 @@
 "help_header_play": "Jugar",
 "help_header_rightClick": "Clic Derecho",
 "help_header_advanced": "Avanzado",
-"msg_tip_quicklinks": "Arrasta palabras para crear multiples enlaces Rez",
-"msg_tip_rez-tool": "Haz Clic en una palabra para agregar la a la cadena Rez",
+"msg_tip_quicklinks": "Arrastar palabras para crear multiples enlaces de Resonancia",
+"msg_tip_rez-tool": "Haz Clic en una palabra para agregar la a la cadena de Resonancia",
 "msg_tip_track-tool": "La herramienta de Rastreo marca la correferencia entre meciones de la misma referencia ",
 "msg_tip_stack-tool": "Haz clic en una línea para agregar la a la Pila",
 "msg_tip_insert-word": "Haz clic para insertar una nueva palabra en el cursor",
 "msg_tip_chunk": "Para marcar un Trozo, arrastre el cursor a lo largo de 2 palabras en una línea.",
 "msg_tip_view-main": "Cambiar la vista a la pantalla principal",
 "msg_tip_view-table": "Cambiar la vista a vista de Tabla",
-"msg_warning_read-mode": "Estás en modo de lectura.#Para marcar los datos del discurso,#elige#la herramienta de rastreo o la Herramienta Rez",
-"msg_tip_tool-select2": "Selecciona la herramienta de marcar:#Rastrea:Marca correferencia entre menciones del mismo referente#Rez: Marca resonancia entre palabras relacionadas",
-"msg_tip_tool-select": "Selecciona una herramienta: #leer: Explorar tu data sin hacer cambios#Rastrear: Marcar correferencias entre menciones#Rez: Marcar resonancia entre palabraswords",
+"msg_warning_read-mode": "Estás en modo de lectura.#Para marcar los datos del discurso,#elige#la herramienta de rastreo o la Herramienta de resonancia",
+"msg_tip_tool-select2": "Selecciona la herramienta de marcar:#Rastrea:Marca correferencia entre menciones del mismo referente#Resonar: Marca resonancia entre palabras relacionadas",
+"msg_tip_tool-select": "Selecciona una herramienta: #leer: Explorar tu data sin hacer cambios#Rastrear: Marcar correferencias entre menciones#Resonar: Marcar resonancia entre palabraswords",
 "msg_tip_keyboard-shortcuts": "Selecciona Ayuda para ver atajos de teclado",
 "msg_warning_autosave": "Guardando…",
 "menu_import": "Importar",
@@ -248,8 +249,8 @@
 "search_custom-field": "Entrar nombre para campo personalizado",
 "search_custom-tag": "Entrar nombre para etiqueta perzonalizada.",
 "search_dialogue_word": "Entrar cadena para buscar.",
-"search_dialogue_current-unit": "En Cadena Rez EnfocadaFocused",
-"search_dialogue_case": "Distingue Minúscula y Mayúscula",
+"search_dialogue_current-unit": "Cadena de Resonancia Enfocada",
+"search_dialogue_case": "Distingue mayúscula y minúscula",
 "search_dialogue_transcript": "BuscarTranscripción",
 "search_dialogue_regEx": "Expresión Regular",
 "msg_new-category": "Nombre de categoria nueva de etiquetas",
@@ -318,7 +319,7 @@
 "help_label_columns-narrow": "Hacer columnas más angostas",
 "help_label_decrease_height": "Hacer líneas más cortas",
 "help_label_clip": "Exportar Acorte",
-"help_description_clip": "Specify start\/end lines of Save",
+"help_description_clip": "Especificar líneas de inicio\/fin de Guardar ",
 "key_open": "o",
 "key_home": "[Inicio]",
 "help_description_home": "Saltar al comienzo de la línea actual",
@@ -346,21 +347,21 @@
 "help_description_color": "Cambiar el color de la cadena seleccionada",
 "help_description_delete-plain": "Eliminar cadena seleccionada",
 "help_description_focus": "Enfocar una palabra (y agregar a la cadena)",
-"help_description_rez": "Comenzar una cadena de Rez nueva",
+"help_description_rez": "Comenzar una cadena de Resonancia nueva",
 "help_description_track2": "Comenzar una nueva cadena de Rastro",
 "help_description_stack_2": "Comenzar una nueva cadena de Apilar",
-"help_description_clique-tab2": "Mover a la pestaña de Clica de ventana de Navegación",
+"help_description_clique-tab2": "Mover a la pestaña de Clique de ventana de Navegación",
 "warning_import_twice": "No se puede Importar el mismo archivo dos veces",
 "msg_import_file_map": "Importar Mapeo de Archivos",
 "menu_summary": "Resumen",
 "label_user_file_name": "Nombre de Archivo: ",
-"label_total_line": "Cuenta Total de Líneas: ",
-"label_markers_found": "Marcadores Encontrados: ",
+"label_total_line": "Recuento total de líneas: ",
+"label_markers_found": "Marcadores encontrados: ",
 "msg_continue": "Continuar",
 "menu_import_fields": "Importar Campos",
 "label_back": "Regresa",
 "msg_warning_clear_stacks": "Estás a punto de borrar todas las Pilas",
-"msg_warning_clear_rez": "Estás a punto de borrar todas las cadenas Rez.",
+"msg_warning_clear_rez": "Estás a punto de borrar todas las cadenas de Resonancia.",
 "msg_warning_clear_track": "Estás a punto de borrar todas las cadenas de Rastreo.",
 "msg_warning_clear_chains": "Estás a punto de borrar todas tus cadenas.",
 "msg_warning_clear_focused_chain": " Estás a punto de borrar esta cadena.",
@@ -391,7 +392,7 @@
 "label_option_present": "Presente", 
 "label_option_where_elmo": "Donde esta Elmo", 
 "label_option_rezzles": "Rezzles",
-"msg_cannot_play_rez": "Todavía no se puede hacer Rez-juego para rastreo o pilas     ",
+"msg_cannot_play_rez": "Todavía no se puede hacer Resonar-juego para rastreo o pilas     ",
 "msg_no_playback": "No hay enlaces para reproducir",
 "msg_end_stackshow": "Terminar Show de Apilar",
 "msg_move_counter": "Mover Contador:  ",
@@ -418,7 +419,7 @@
 "label_score": "Puntación: ",
 "msg_error_type": "Error:",
 "label_mark_exceptions": "Marca las Excepciones",
-"label_rezonator_fields": "Campos de Rezonador",
+"label_rezonator_fields": "Campos de Rezonator",
 "label_add_custom_label": "Agregar etiqueta personalizada",
 "msg_input_speaker": "Entrar Orador: ",
 "label_total_lines_found": "Número Total de Líneas encontradas: ",
@@ -428,14 +429,14 @@
 "msg_input_any_number": "Entra un número por favor.",
 "msg_select_discourse": "Seleccionar discurso",
 "msg_specify_line": "Especificar Línea...",
-"msg_open_docs" : " Abrir Documentación ",
+"msg_open_docs": " Abrir Documentación ",
 "msg_choose_import": "Elige el tipo de archivo para importar",
 "msg_example": "Ejemplo ",
 "menu_save-as": "Guardar ComoSave As",
 "menu_delete-all": "Eliminar Todo",
-"menu_track_chains_pl": "Cadena de Huellas",
+"menu_track_chains_pl": "Cadena de Rastreo",
 "menu_stacks_pl": "Pilas ",
-"menu_rez_chains_pl": "Cadenas de Rez",
+"menu_rez_chains_pl": "Cadenas de Resonancia",
 "menu_chains_pl": "Cadenas ",
 "menu_window": "Ventana ",
 "menu_nav": "Navegación",
@@ -462,20 +463,71 @@
 "menu_zero": "Cero",
 "menu_restore-hints": "Restaurar Pistas",
 "menu_language": "Idioma",
-"menu_language-en" : "English",
-"menu_language-es" : "Español",
-"menu_language-he" : "עִבְרִית",
-"menu_language-it" : "Italiano",
-"menu_language-ja" : "日本語",
-"menu_language-vi" : "Tiếng Việt",
-"menu_language-zh" : "中文",
+"menu_language-en": "English",
+"menu_language-es": "Español",
+"menu_language-he": "עִבְרִית",
+"menu_language-it": "Italiano",
+"menu_language-ja": "日本語",
+"menu_language-vi": "Tiếng Việt",
+"menu_language-zh": "中文",
 "menu_autosave": "Autoguardare",
-"menu_advanced": "Advanzado",
+"menu_advanced": "Avanzado",
 "menu_developer": "Desarollador",
 "menu_5-min": "5 minutos",
 "menu_10-min": "10 minutos",
 "menu_20-min": "20 minutos",
 "menu_30-min": "30 minutos",
 "menu_off": "Apagado",
-"menu_read": "Leer"
+"menu_read": "Leer",
+"import_choose_file": "Elige el tipo de archivo para importar",
+"import_data_type": "Tipo de datos ",
+"import_line": "Por línea",
+"import_tab": "pestaña",
+"import_whitespace": "Espacio en blanco",
+"import_hyphen": "Guión",
+"import_file_type": "Archivo",
+"import_type_transcription": "Transcripción",
+"import_type_elan": "Estilo ",
+"import_type_song": "Canción y Verson",
+"import_type_prose": "número de índice",
+"import_type_word": "Una palabra por línea",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "Interlineak Glosado",
+"import_line_unit": "Unidad",
+"import_line_paragraph": "Párrafo",
+"import_line_word": "Palabra",
+"import_line_unitperblock": "Unidad por  bloque",
+"import_example": "Ejemplo ",
+"import_continue": "Continuar",
+"import_warning": "Este archivo contiene caracteres que no están codificados en UTF-8. Algunos caracteres pueden faltar en Rezonator.",
+"import_ok": "Ok",
+"import_mapping": "Importar Mapeo de Archivos",
+"import_mapping_summary": "Resumen",
+"import_mapping_exceptions": "Excepciones",
+"import_mapping_filename": "Nombre de Archivo: ",
+"import_mapping_token": "Recuento total de tokens: ",
+"import_mapping_line": "Recuento total de líneas: ",
+"import_mapping_markers": "Marcadores encontrados: ",
+"import_mapping_fields": "Importar Campos",
+"import_mapping_marker": "Marcadores",
+"import_mapping_example": "Ejemplo ",
+"import_mapping_marker_perc": "Marcador %",
+"import_mapping_singletoken": " Token único",
+"import_mapping_tokencount": "Recuento de Token",
+"import_mapping_level": "Nivel(esquema)",
+"import_mapping_levelpred": "Nivel(Predicho)",
+"import_mapping_special": "Campos especiales",
+"import_mapping_level_token": "token",
+"import_mapping_level_discourse": "discurso",
+"import_mapping_level_unit": "Unidad",
+"import_mapping_level_exception": "EXCEPCIÓN",
+"import_mapping_fields_displaytoken": "Token de Pantalla",
+"import_mapping_fields_transcript": "Transcripción",
+"import_mapping_fields_speaker": "Orador",
+"import_mapping_fields_unitStart": "Inicio de unidad",
+"import_mapping_fields_unitEnd": "Final de unidad",
+"import_mapping_fields_unitDelim": "Delimitador de Unidad",
+"import_mapping_fields_turnDelim": "Delimitador de Turno",
+"import_mapping_fields_trnaslation": "Traducción",
+"import_mapping_selectmessage": "Seleccione un campo para que sea el Token de visualización usando la sección campos especiales."
 }
