--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -438,6 +438,8 @@
 "menu_stacks_pl" : "Stacks",
 "menu_rez_chains_pl" : "Rez Chains",
 "menu_chains_pl" : "Chains",
+"menu_main": "Main",
+"menu_center": "Center",
 "menu_window" : "Window",
 "menu_nav" : "Nav",
 "menu_grid" : "Grid",
@@ -450,6 +452,7 @@
 "menu_between" : "Between",
 "menu_below" : "Below",
 "menu_keyboard" : "Keyboard",
+"menu_keyword": "Keyword",
 "menu_clear" : "Clear",
 "menu_turn" : "Turn",
 "menu_sentence" : "Sentence",
