--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -30,7 +30,7 @@
 "menu_help" : "Help",
 "menu_docs" : "Docs",
 "menu_about" : "About",
-"menu_track" : "Trail",
+"menu_track" : "Track",
 "menu_rez" : "Rez",
 "menu_stack" : "Stack",
 "msg_file_audio" : "Select audio file (*.ogg)",
