Kazakh glossary added + language names upated
Kazakh localization has been added. Two-letter codes for each language have been fixed. A language value indicating the name for each language has been added to every glossary.

--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_gu.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_gu.json
@@ -473,6 +473,10 @@
 "menu_language-ja": "日本語",
 "menu_language-vi": "Tiếng Việt",
 "menu_language-zh": "中文",
+"menu_language-hy": "Հայերեն",
+"menu_language-gu": "ગુજરાતી",
+"menu_language-kk" : "Қазақша",
+"menu_language-ru": "Русский",
 "menu_autosave": "ઓટોસેવ",
 "menu_advanced": "એડવાંસ",
 "menu_developer": "ડેવલપર",
