--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
@@ -1,5 +1,5 @@
 {
-"locale_code" : "中文",
+"locale_code" : "zh",
 "msg_warning_import_error": "错误：文件格式不支持",
 "msg_create_tag": "创建新标签",
 "msg_labels": "标签",
@@ -470,6 +470,10 @@
 "menu_language-ja": "日本語",
 "menu_language-vi": "Tiếng Việt",
 "menu_language-zh": "中文",
+"menu_language-hy": "Հայերեն",
+"menu_language-gu": "ગુજરાતી",
+"menu_language-kk" : "Қазақша",
+"menu_language-ru": "Русский",
 "menu_autosave": "自动保存",
 "menu_advanced": "高级",
 "menu_developer": "开发者",
