--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
@@ -1,6 +1,6 @@
 {
 "locale_code" : "vi",
-"msg_warning_import_error": "Lỗi: Tệp loại không được hỗ trợ",
+"msg_warning_import_error": "Lỗi: Loại tệp không được hỗ trợ",
 "msg_create_tag": "Tạo thẻ mới",
 "msg_labels": "Nhãn",
 "menu_file": "Tệp",
@@ -8,13 +8,14 @@
 "menu_view": "Xem",
 "menu_search": "Tìm kiếm",
 "menu_filter": "Bộ lọc",
+"menu_stack": "Bộ",
 "menu_options": "Tùy chọn",
 "menu_sort_pane": "Ngăn sắp xếp",
 "msg_elmo_title": "Elmo đâu rồi?",
 "msg_elmo_okay": "Được",
 "msg_game-description": "Trò chơi",
 "msg_game-quitChain": "Bỏ Chuỗi",
-"msg_game-stackShow": "StackShow",
+"msg_game-stackShow": "Trình bày các bộ",
 "msg_elmo_track-first": "Tìm một từ nói về anh hùng trong câu chuyên này, và nhấp vào để thêm từ đó vào Dấu vết!",
 "msg_elmo_track-more": "Tìm thêm các từ đề cập đến anh hùng, và nhấp vào để thêm từ đó vào Dấu vết!",
 "msg_elmo_all-done": "Khi bạn đã tìm thấy được tất cả các từ đề cập đến anh hùng, hãy nhấp vào OK đễ gửi câu trả lời của bạn!",
@@ -30,7 +31,7 @@
 "menu_docs": "Tài liệu hướng dẫn",
 "menu_about": "Giới thiệu",
 "menu_track": "Dấu vết",
-"menu_rez": "Rez",
+"menu_rez": "Cộng hưởng",
 "menu_stack": "Bộ",
 "msg_file_audio": "Chọn tệp âm thanh (*.ogg)",
 "msg_warning_save-prompt": "Lưu trước khi thoát?",
@@ -38,11 +39,11 @@
 "msg_warning_saving": "Đang lưu…",
 "msg_syncplay": "Phát lại theo chế độ Đồng bộ ",
 "menu_user": "Người dùng",
-"menu_clique": "Clique",
+"menu_clique": "Đồ thị con",
 "menu_go-to-line": "Đi tới Dòng",
 "menu_go-to-time": "Đi tới Time ",
 "menu_stacker": "Tạo các Bộ",
-"menu_stackShow": "StackShow",
+"menu_stackShow": "Trình bày các bộ",
 "menu_pane": "Ngăn",
 "menu_justify": "Căn chỉnh",
 "menu_prose": "Văn xuôi",
@@ -53,8 +54,8 @@
 "help_description_delete-link": "Xoá bỏ từ khỏi Chuỗi",
 "help_description_track": "Tạo Chuỗi Dấu vết",
 "help_description_stack": "Tạo Bộ",
-"help_description_clique-tab": "Chọn tab Clique ",
-"help_description_quicklink": "Kéo qua các từ để tạo nhiều liên kết Rez",
+"help_description_clique-tab": "Chọn tab Đồ thị con",
+"help_description_quicklink": "Kéo qua các từ để tạo nhiều liên kết cộng hưởng",
 "help_description_quickstack": "Kéo qua các số dòng đễ tạo một Bộ",
 "help_description_insert-word": "Chèn từ mới vào con trỏ",
 "help_description_box": "Chọn các từ để Box them",
@@ -85,7 +86,7 @@
 "help_description_playaudio": "Phát\/tạm dừng âm thanh",
 "help_description_syncplay": "Đồng bộ hóa phát lại các từ và âm thanh",
 "help_description_mute": "Tắt tiếng",
-"help_description_shuffle": "Sắp xếp các dòng theo thứ tự ngẩu nhiên",
+"help_description_shuffle": "Sắp xếp các dòng theo thứ tự ngẫu nhiên",
 "help_description_restore-sequence": "Khôi phục trình tự dòng ban đầu",
 "help_description_developer-view": "Bật lên chế đọ xem nhà phát triển",
 "help_description_download": "Tải về Rezonator",
@@ -162,7 +163,7 @@
 "help_label_focus": "Làm nổi bật",
 "help_label_quit": "Kết thúc",
 "help_label_zap": "Hạ gục",
-"help_label_rez": "Rez",
+"help_label_rez": "Cộng hưởng",
 "help_label_view-select": "Xem",
 "help_label_word-format2": "Định dạng từ",
 "help_label_zoom-out": "Thu nhỏ",
@@ -216,22 +217,22 @@
 "help_header_play": "Phát",
 "help_header_rightClick": "Nhấp chuột phải",
 "help_header_advanced": "Nâng cao",
-"msg_tip_quicklinks": "Kéo qua các từ để tạo nhiều liên kết Rez",
-"msg_tip_rez-tool": "Nhấp vào một từ để thêm nó vào Chuỗi Rez",
+"msg_tip_quicklinks": "Kéo qua các từ để tạo nhiều liên kết cộng hưởng",
+"msg_tip_rez-tool": "Nhấp vào một từ để thêm nó vào Chuỗi cộng hưởng",
 "msg_tip_track-tool": "Công cụ Dấu vết đánh dấu vào mối quan hệ giữa các lượt đề cập của cùng một cái đẻ đối chiếu",
 "msg_tip_stack-tool": "Nhấp vào một dòng đễ thêm nó vào Bộ",
 "msg_tip_insert-word": "Nhấp để chèn từ mới vào con trỏ",
 "msg_tip_chunk": "Để đánh dấu một Khúc, hãy kéo con trỏ qua 2 từ trong một dòng.",
 "msg_tip_view-main": "Thay đổi chế độ xem sang Màn hình chính",
 "msg_tip_view-table": "Thay đôi chế độ xem sang Chế độ xem bảng",
-"msg_warning_read-mode": "Bạn đang trong chế độ Đọc.# Để đánh dấu dữ liệu diễn ngôn,# chọn #công cụ Dấu vết hoặc công cụ Rez.",
-"msg_tip_tool-select2": "Chọn một công cụ trình đánh dấu: #Theo dõi: Đánh dấu vào mối quan hệ giữa các lượt đề cập của cùng một cái đẻ đối chiếu#Rez: Đánh dấu vào sự cộng hưởng giữa các từ có liên quan ",
-"msg_tip_tool-select": "Chọn một công cụ: #Đọc: khám phá dữ liệu của bạn mà không cần thực hiện thay đổi#Theo dõi: Đánh dấu vào mối quan hệ giữa các lượt đề cập#Rez: Đánh dấu vào sự cộng hưởng giữa vài từ",
+"msg_warning_read-mode": "Bạn đang trong chế độ Đọc.# Để đánh dấu dữ liệu diễn ngôn,# chọn #công cụ Dấu vết hoặc công cụ cộng hưởng.",
+"msg_tip_tool-select2": "Chọn một công cụ trình đánh dấu: #Theo dõi: Đánh dấu vào mối quan hệ giữa các lượt đề cập của cùng một cái đẻ đối chiếu#Cộng hưởng: Đánh dấu vào sự cộng hưởng giữa các từ có liên quan ",
+"msg_tip_tool-select": "Chọn một công cụ: #Đọc: khám phá dữ liệu của bạn mà không cần thực hiện thay đổi#Theo dõi: Đánh dấu vào mối quan hệ giữa các lượt đề cập#Cộng hưởng: Đánh dấu vào sự cộng hưởng giữa vài từ",
 "msg_tip_keyboard-shortcuts": "Hãy nhấp vào Trợ giúp đễ xem phím tắt.",
 "msg_warning_autosave": "Đang lưu…",
 "menu_import": "Nhập",
-"msg_audio": "?Dấu vết âm thanh",
-"msg_jump-audio": "?Nhấp vào từ để chuyển âm thanh",
+"msg_audio": "Ca khúc âm thanh",
+"msg_jump-audio": "Nhấp vào từ để chuyển âm thanh",
 "msg_rename": "Đổi tên lựa chọn",
 "msg_delete-chosen": "Xóa bỏ lựa chọn",
 "msg_caption": "Chú thích đã được nhấp vào",
@@ -248,7 +249,7 @@
 "search_custom-field": "Hãy đầu vào tên cho trường tùy chỉnh.",
 "search_custom-tag": "Hãy đầu vào cho tên thẻ tùy chỉnh.",
 "search_dialogue_word": "Hãy đầu vào Chuỗi để tìm kiếm.",
-"search_dialogue_current-unit": "Chuỗi Rez đang được nổi bật",
+"search_dialogue_current-unit": "Chuỗi cộng hưởng đã được nổi bật",
 "search_dialogue_case": "Phân biệt chữ hoa\/thường",
 "search_dialogue_transcript": "Tìm kiếm từ trong Phiên âm",
 "search_dialogue_regEx": "Biểu thức chính quy",
@@ -287,7 +288,7 @@
 "msg_turn-notfound": "Không tìm thấy thứ tự lượt nào cả",
 "msg_note-column": "Không tìm thấy được cột Kết chủ",
 "msg_default-stack": "Cho thấy các Bộ mặc định",
-"msg_random-stack": "Cho thấy các Bộ ngẩu nhiên ",
+"msg_random-stack": "Cho thấy các Bộ ngẫu nhiên ",
 "msg_congrats": "Xin chúc mừng bạn! Cuộc nói chuyện đã trở lại theo thứ tự.",
 "msg_lines-notordered": "Xin lỗi! Còn một số dòng vẫn không theo thứ tự.",
 "msg_select-all": "Chọn tất cả",
@@ -346,21 +347,21 @@
 "help_description_color": "Thay đổi màu của chuỗi đã chọn",
 "help_description_delete-plain": "Xóa bỏ chuỗi đã chọn",
 "help_description_focus": "Làm nỏi bật một từ (và thêm nó vào Chuỗi)",
-"help_description_rez": "Bắt đầu một chuỗi Rez mới",
+"help_description_rez": "Bắt đầu một chuỗi cộng hưởng mới",
 "help_description_track2": "Bắt đầu một chuỗi Dấu vết mới",
 "help_description_stack_2": "Bắt đầu một chuỗi Bộ mới",
-"help_description_clique-tab2": "Di chuyển tab Clique đến cửa sổ Điều hướng",
+"help_description_clique-tab2": "Di chuyển tab Đồ thị con đến cửa sổ Điều hướng",
 "warning_import_twice": "Không thể nhập lại cùng một tệp",
 "msg_import_file_map": "Nhập Tệp Ánh xạ",
 "menu_summary": "Tóm lược",
 "label_user_file_name": "Tên tệp: ",
-"label_total_line": "Tổng số dòng: ",
+"label_total_line": "Tống số dòng: ",
 "label_markers_found": "Các điểm đánh dấu được tìm thấy: ",
 "msg_continue": "Tiếp tục",
 "menu_import_fields": "Nhập các trường ",
 "label_back": "Quay lại",
 "msg_warning_clear_stacks": "Bạn sắp xóa tất cả các Bộ.",
-"msg_warning_clear_rez": "Bạn sắp xóa tất cả các chuỗi Rez.",
+"msg_warning_clear_rez": "Bạn sắp xóa tất cả các chuỗi cộng hưởng.",
 "msg_warning_clear_track": "Bạn sắp xóa tất cả các chuỗi Track.",
 "msg_warning_clear_chains": "Bạn sắp xóa tất cả các chuỗi của bạn.",
 "msg_warning_clear_focused_chain": "Bạn sắp xóa chuỗi này.",
@@ -387,11 +388,11 @@
 "search_beginning-line": "Hãy đầu vào số dòng đầu hoặc đuôi ",
 "msg_input_regex": "Hãy đầu vào Biểu thức chính quy.",
 "msg_where-is-elmo_instructions": "Elmo đâu rồi?\n\n Nhấp vào các từ để thêm nó vào chuỗi Dấu vết!\n Hãy nhấn [Enter] để gửi câu trả lời của bạn!",
-"msg_elmo_score": "Bạn đã làm tốt lắm!\n\n Đây là điểm số của bạn: \n",
+"msg_elmo_score": "Làm tốt lắm!\n\n Đây là điểm số của bạn: \n",
 "label_option_present": "Có mặt", 
 "label_option_where_elmo": "Elmo đâu rồi", 
 "label_option_rezzles": "Rezzles",
-"msg_cannot_play_rez": "Chưa phát lại theo chế độ Rez cho dáu vết hoặc bộ được",
+"msg_cannot_play_rez": "Chưa thể phát lại theo chế độ cộng hưởng cho dáu vết hoặc bộ được",
 "msg_no_playback": "Không có liên kết đễ phát lại",
 "msg_end_stackshow": "Kết thức StackShow",
 "msg_move_counter": "Máy đếm Bước đi: ",
@@ -406,7 +407,7 @@
 "label_word": "Từ: ",
 "label_void": "Void: ",
 "label_create_stacks": "Tạo các Bộ",
-"label_exceptions": "Các trường hợp ngoại lệ",
+"label_exceptions": "Các ngoại lệ",
 "msg_save_csv": "Chọn vị trí cho thư mục CSV",
 "msg_save_schema_file": "Chọn vị trí cho tệp Giản đồ",
 "msg_error_many_numbers": "Bạn đã đầu vào quá nhiều số, vui lòng đầu vào hai số dòng độc nhất",
@@ -417,7 +418,7 @@
 "question_save_before_exit": "Bạn có muốn lưu trước khi thoát không?",
 "label_score": "Điểm: ",
 "msg_error_type": "Lỗi:",
-"label_mark_exceptions": "Đánh dấu các trường hợp ngoại lệ",
+"label_mark_exceptions": "Đánh dấu các ngoại lệ",
 "label_rezonator_fields": "Các trường Rezonator",
 "label_add_custom_label": "Thêm nhãn tùy chỉnh",
 "msg_input_speaker": "Hãy đầu vào Người nói: ",
@@ -428,14 +429,14 @@
 "msg_input_any_number": "Xin vui lòng đầu vào một con số.",
 "msg_select_discourse": "Chọn diễn ngôn",
 "msg_specify_line": "Chỉ định Dòng...",
-"msg_open_docs" : " Mở Tài liệu hướng dẫn Rezonator ",
+"msg_open_docs": " Mở Tài liệu hướng dẫn Rezonator ",
 "msg_choose_import": "Chọn một loại tệp để nhập",
 "msg_example": "Ví dụ",
 "menu_save-as": "Lưu như",
 "menu_delete-all": "Xóa Tất cả",
 "menu_track_chains_pl": "Theo dõi cac Chuỗi",
 "menu_stacks_pl": "Các Bộ",
-"menu_rez_chains_pl": "Các Chuỗi Rez",
+"menu_rez_chains_pl": "Các Chuỗi cộng hưởng",
 "menu_chains_pl": "Các Chuỗi",
 "menu_window": "Cửa sổ",
 "menu_nav": "Điều hướng",
@@ -454,7 +455,7 @@
 "menu_sentence": "Câu",
 "menu_random": "Ngẫu nhiên",
 "menu_stacktab": "Tab Bộ",
-"menu_stackshow": "StackShow",
+"menu_stackshow": "Trình bày các bộ",
 "menu_stacker": "Trình xếp chồng",
 "menu_settings": "Cài đặt",
 "menu_wide": "Rộng",
@@ -462,17 +463,13 @@
 "menu_zero": "Không",
 "menu_restore-hints": "Khôi phục các Lời gợi ý",
 "menu_language": "Ngôn ngữ",
-"menu_language-en" : "English",
-"menu_language-es" : "Español",
-"menu_language-he" : "עִבְרִית",
-"menu_language-it" : "Italiano",
-"menu_language-ja" : "日本語",
-"menu_language-vi" : "Tiếng Việt",
-"menu_language-zh" : "中文",
-"menu_language-hy": "Հայերեն",
-"menu_language-gu": "ગુજરાતી",
-"menu_language-kk" : "Қазақша",
-"menu_language-ru": "Русский",
+"menu_language-en": "English",
+"menu_language-es": "Español",
+"menu_language-he": "עִבְרִית",
+"menu_language-it": "Italiano",
+"menu_language-ja": "日本語",
+"menu_language-vi": "Tiếng Việt",
+"menu_language-zh": "中文",
 "menu_autosave": "Lưu Tự động",
 "menu_advanced": "Nâng cao",
 "menu_developer": "Nhà phát triển",
@@ -481,5 +478,56 @@
 "menu_20-min": "20 phút",
 "menu_30-min": "30 phút",
 "menu_off": "Tắt",
-"menu_read": "Đọc"
+"menu_read": "Đọc",
+"import_choose_file": "Chọn một loại tệp để nhập",
+"import_data_type": "Loại dữ liệu",
+"import_line": "Mỗi dòng",
+"import_tab": "Tab",
+"import_whitespace": "Khoảng trắng",
+"import_hyphen": "Dấu gạch ngang",
+"import_file_type": "Tệp",
+"import_type_transcription": "Bản chép lời",
+"import_type_elan": "Elan",
+"import_type_song": "Bài hát & câu thơ",
+"import_type_prose": "Văn xuôi",
+"import_type_word": "Một từ mỗi dòng",
+"import_type_conllu": "CoNLL-U",
+"import_type_interlinear": "Ky hiệu nội tuyến ",
+"import_line_unit": "Đơn vị",
+"import_line_paragraph": "Đoạn văn",
+"import_line_word": "Từ",
+"import_line_unitperblock": "Đơn vị mỗi Khối",
+"import_example": "Ví dụ",
+"import_continue": "Tiếp tục",
+"import_warning": "Tệp này có chứa các ký từ không được mã hóa bằng UTF-8. Một số ký tự có thể bị thiếu trong Rezonator.",
+"import_ok": "Được",
+"import_mapping": "Nhập Tệp Ánh xạ",
+"import_mapping_summary": "Tóm lược",
+"import_mapping_exceptions": "Các ngoại lệ",
+"import_mapping_filename": "Tên tệp: ",
+"import_mapping_token": "Tổng số mã thông báo: ",
+"import_mapping_line": "Tống số dòng: ",
+"import_mapping_markers": "Các điểm đánh dấu được tìm thấy: ",
+"import_mapping_fields": "Nhập các trường ",
+"import_mapping_marker": "Điểm đánh dấu",
+"import_mapping_example": "Ví dụ",
+"import_mapping_marker_perc": "Điểm đánh dấu %",
+"import_mapping_singletoken": "Một mã thông báo",
+"import_mapping_tokencount": "Số luọng mã thông báo",
+"import_mapping_level": "Cấp(Giản đồ)",
+"import_mapping_levelpred": "Cấp(Dự đoán)",
+"import_mapping_special": "Trường đặc biệt",
+"import_mapping_level_token": "mã thông báo",
+"import_mapping_level_discourse": "diễn ngôn",
+"import_mapping_level_unit": "đơn vị",
+"import_mapping_level_exception": "NGOẠI LỆ",
+"import_mapping_fields_displaytoken": "Mã thông báo hiển thị",
+"import_mapping_fields_transcript": "Bản chép lời",
+"import_mapping_fields_speaker": "Người nói",
+"import_mapping_fields_unitStart": "Đơn vị bất đầu",
+"import_mapping_fields_unitEnd": "Đơn vị kết thúc",
+"import_mapping_fields_unitDelim": "Dấu phân cách đơn vị",
+"import_mapping_fields_turnDelim": "Dấu phân cách lượt",
+"import_mapping_fields_trnaslation": "Bản dịch",
+"import_mapping_selectmessage": "Xin vui lòng chọn một trường làm Mã hiển thị bằng các sử dụng phần Trường đặc biệt."
 }
