--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
@@ -470,6 +470,10 @@
 "menu_language-ja": "日本語",
 "menu_language-vi": "Tiếng Việt",
 "menu_language-zh": "中文",
+"menu_language-hy": "Հայերեն",
+"menu_language-gu": "ગુજરાતી",
+"menu_language-kk" : "Қазақша",
+"menu_language-ru": "Русский",
 "menu_autosave": "Lưu Tự động",
 "menu_advanced": "Nâng cao",
 "menu_developer": "Nhà phát triển",
