--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_zh.json
@@ -533,5 +533,45 @@
 "import_mapping_fields_unitDelim": "单元定界符",
 "import_mapping_fields_turnDelim": "旋转定界符",
 "import_mapping_fields_trnaslation": "翻译",
-"import_mapping_selectmessage": "请选择字段作为用于特殊字段的显示标记"
+"import_mapping_selectmessage": "请选择字段作为用于特殊字段的显示标记",
+"import_descrip_sv_form" : "短行文字", 
+"import_descrip_sv_newline" : "请注意换行", 
+"import_descrip_sv_wordwrap" : "没有自动换行",
+"import_descrip_sv_split" : "空格分隔文字", 
+"import_descrip_sv_filetype" : "文件格式：纯文本（.txt）", 
+"import_descrip_prose_form" : "长段文字", 
+"import_descrip_prose_newline" : "段落结束处回车", 
+"import_descrip_prose_wordwrap" : "换行以适合页面或屏幕", 
+"import_descrip_prose_split" : "空格分隔文字", 
+"import_descrip_prose_filetype" : "文件格式：纯文本（.txt）", 
+"import_descrip_word_form" : "行与列", 
+"import_descrip_word_newline" : "垂直读取文本列",
+"import_descrip_word_row" : "每行代表一个单词（符号）",
+"import_descrip_word_column" : "每列代表一个单词特征",
+"import_descrip_word_filetype" : "文件格式：电子表格（.csv）",
+"import_descrip_conllu_form" : "行与列",
+"import_descrip_conllu_newline" : "垂直读取文本列",
+"import_descrip_conllu_row" : "每行代表一个单词（符号）",
+"import_descrip_conllu_column" : "每列代表一个单词特征",
+"import_descrip_conllu_hashtag" : "标签线标记单位特征",
+"import_descrip_conllu_filetype" : "文件格式：电子表格（.csv）",
+"import_descrip_trans_form" : "一单位一行",
+"import_descrip_trans_read" : "正常阅读文本",
+"import_descrip_trans_speaker" : "制表符标记语者",
+"import_descrip_trans_timestamps" : "制表符标记时间戳（可忽略）",
+"import_descrip_trans_split" : "空格分割文字",
+"import_descrip_trans_filetype" : "文件格式：制表符分隔的文本 (.txt, .csv)",
+"import_descrip_elan_form" : "一单元一区块",
+"import_descrip_elan_block" : "每区块超过一行",
+"import_descrip_elan_read" : "正常阅读文本",
+"import_descrip_elan_speaker" : "制表符标记语者",
+"import_descrip_elan_timestamps" : "制表符标记时间戳",
+"import_descrip_elan_whitespace" : "空格分割文字", 
+"import_descrip_elan_filetype" : "文件格式：制表符分隔的文本 (.txt)",
+"import_descrip_igt_block" : "一单元一区块", 
+"import_descrip_igt_lines" : "每区块超过两行",
+"import_descrip_igt_split" : "空格和连字符分隔文字",
+"import_descrip_igt_separate" : "空行分隔区块", 
+"import_descrip_igt_filetype" : "文件格式：纯文本（.txt）"
+}
 }
