--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -3,6 +3,12 @@
 	"import_col_description" : "Description",
 	"import_col_example" : "Example",
 	"import_type_song" : "Song & Verse",
+	"import_type_prose" : "Prose",
+	"import_type_word" : "One Word per Line",
+	"import_type_conllu" : "CoNLL-U",
+	"import_type_transcription" : "Transcription",
+	"import_type_elan" : "Elan (tab-delimited)",
+	"import_type_interlinear" : "Interlinear Glossed Text",
 	"import_descrip_song_form" : "Short lines of text",
 	"import_descrip_song_newline" : "Line breaks are meaningful",
 	"import_descrip_song_wordwrap" : "No word wrap",
@@ -46,7 +52,9 @@
 	"msg_change_field" : "Change field",
 	"msg_display_unit" : "Display unit",
 	"msg_find_previous" : "Find previous",
+	"msg_remove" : "Remove",
 	"find_next" : "Find next",
+	"option_seq" : "Sequence",
 	"option_sort" : "Sort",
 	"option_previous" : "Previous",
 	"option_stop" : "Stop",
