--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_en.json
@@ -52,7 +52,6 @@
 	"msg_change_field" : "Change field",
 	"msg_display_unit" : "Display unit",
 	"msg_find_previous" : "Find previous",
-	"msg_remove" : "Remove",
 	"find_next" : "Find next",
 	"option_seq" : "Sequence",
 	"option_sort" : "Sort",
@@ -530,4 +529,9 @@
 	"menu_main" : "Main",
 	"menu_clip-all" : "Clip all stacks",
 	"unit_end" : "Unit end",
+	"msg_remove" : "Remove",
+	"tag_unknown" : "n/a",
+	"msg_load-schema" : "Load import schema",
+	"msg_save-schema" : "Save import schema",
+
 }
