--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_he.json
@@ -516,13 +516,32 @@
     "chain_count": "ספירת שרשראות",
     "unit_count": "ספירת יחידות",
     "start": "התחלה",
-	"msg_select-all": "בחר הכל",
+	"option_seq": "רצף",
 	"import_type_prose": "טקסט",
 	"import_type_word": "מילה אחת בכל שורה",
 	"import_type_conllu": "CoNLL-U",
 	"import_type_transcription": "תעתיק",
-	"import_type_elan": "Elan",
-	"import_type_interlinear": "מבריק בין-לינארי",
+	"import_type_elan": "Elan (מופרד בtab)",
+	"import_type_interlinear": "טקסט בין-לינארי מבריק",
 	"msg_load-schema": "טעינת סכמת ייבוא",
-	"msg_save-schema": "שמירת סכימת ייבוא"
+	"msg_save-schema": "שמירת סכמת ייבוא",
+	"msg_remove": "הסרה",
+	"tag_unknown": "בלתי ישים",
+	"label_schema": "סכמה",
+	"search_multiple_terms": "השתמשו ב& כדי לחפש מונחים מרובים",
+	"searched_words": "מילים שחופשו",
+	"option_deselect-all": "בטל את הבחירה בכל",
+	"msg_select-all": "בחר הכל",
+	"msg_unsaved-changes": "בטל שמירת שינויים",
+	"msg_saved": "נשמר",
+	"msg_importing": "מייבא",
+	"msg_stack-already-show": "ערימה כבר בתצוגה",
+	"msg_new-user": "הכנס משתמש חדש",
+	"msg_clear-current-chain": "נקה שרשרת נוכחית",
+	"msg_clear-all-chain": "נקה כל השרשראות",
+	"msg_clear-trails": "נקה מסלולים",
+	"msg_clear-resonance": "נקה שרשראות תהודה",
+	"msg_clear-stacks": "נקה ערימות",
+	"msg_new-version-available": "זמינה גרסה חדשה של Rezonator! תרצו להוריד?",
+	"label_version": "גרסה"
 }
