--- a/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
+++ b/Rezonator/datafiles/IncludedFiles/Localization/locale_vi.json
@@ -349,7 +349,7 @@
 	"save_error": "Lỗi phát sinh trong quá trình lưu dữ liệu.",
 	"save_saving": "Đang lưu...",
 	"error_ini-loading": "Lỗi phát sinh trong quá trình tải USERSETTINGS.INI",
-	"error_user-outdated": "Tệp usersettings.ini (cài dặt người dùng) đã lỗi thời.\n<50\/50\/54% >",
+	"error_user-outdated": "Tệp usersettings.ini (cài dặt người dùng) đã lỗi thời.",
 	"error_unit": "Đơn vị",
 	"msg_error_loading": "Lỗi khi tải",
 	"menu_remember": "Ghi nhớ",
@@ -516,13 +516,32 @@
     "chain_count": "Số lượng các chuỗi",
     "unit_count": "Số lượng các đơn vị",
     "start": "Bắt đầu",
-	"msg_select-all": "Chọn tất cả",
+	"option_seq": "Trình tự",
 	"import_type_prose": "Văn xuôi",
-	"import_type_word": "Một từ mỗi dòng",
+	"import_type_word": "Một từ cho  dòng",
 	"import_type_conllu": "CoNLL-U",
 	"import_type_transcription": "Bản chép lời",
-	"import_type_elan": "Elan",
-	"import_type_interlinear": "Ky hiệu nội tuyến",
+	"import_type_elan": "Elan (văn bản được phân tách bằng tab)",
+	"import_type_interlinear": "Ky hiệu nội tuyến ",
 	"msg_load-schema": "Tải giản đồ nhập",
-	"msg_save-schema": "Lưu giản đồ nhập"
+	"msg_save-schema": "Lưu giản đồ nhập",
+	"msg_remove": "Xóa",
+	"tag_unknown": "n\/a (không áp dụng)",
+	"label_schema": "Giản đồ",
+	"search_multiple_terms": "Xài để tìm kiếm nhiều cụm từ",
+	"searched_words": "Những từ được tìm kiếm",
+	"option_deselect-all": "Bỏ chọn tất cả",
+	"msg_select-all": "Chọn tất cả",
+	"msg_unsaved-changes": "Những thay đổi chưa được lưu",
+	"msg_saved": "Đã lưu được",
+	"msg_importing": "Đang nhập",
+	"msg_stack-already-show": "Bộ đã có trong show rồi",
+	"msg_new-user": "Đầu vào người dùng mới",
+	"msg_clear-current-chain": "Thông chuỗi hiện tại",
+	"msg_clear-all-chain": "Thông tất cả các chuỗi",
+	"msg_clear-trails": "Thông tất cả các đường dấu vết",
+	"msg_clear-resonance": "Thông tất cả các chuỗi Resonance (cộng hưởng)",
+	"msg_clear-stacks": "Thông các bộ",
+	"msg_new-version-available": "Đã có một phiên bản mới cho Rezonator! Bạn có muốn tải xuống không?",
+	"label_version": "Phiên bản"
 }
